@@ -3,6 +3,7 @@
 - include krb5.h in lookup_ldap.h (some openssl doesn't implicitly include it).
 - correct initialization of local var in parse_server_string.
 - add missing "multi" map support.
+- add multi nsswitch lookup.
 
 18/06/2007 autofs-5.0.2
 -----------------------
